--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
+    "socket.io": "^4.7.5",
     "stripe": "^14.7.0"
   }
 }
